simplify project structure